# legacy_opengl_demo

./: .gitignore  CMakeLists.txt  README.md  create_symlinks.sh
data/flight/rgb/: bci0.d  bci1.d  bci2.d  bci3.d  bci4.d  f15.d  plate6.d  stealth.d
src/buttonfly/: buttonfly.c  buttonfly.h
src/flight/: flight.c  instr.c  land1.c  message.c  tex.c
src/gl_puzzle/: glpuzzle.c
src/libgobj/: draw.c  read.c
src/porting/: CMakeLists.txt  iris2ogl.c  iris2ogl.h
src/porting/GL/: freeglut.h  gl.h  glu.h  glut.h
src/roller_coaster/: defrc.c
src/smooth/: smooth.c
